# BlurCamBack

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md
include/BlurCamBack/: BlurVideo.hpp
src/: BlurVideo.cpp  main.cpp
tests/perf/: BlurVideo.perf.test.cpp  CMakeLists.txt
tests/unit/: BlurVideo.test.cpp  CMakeLists.txt
